Closed
Bug 39633
Opened 26 years ago
Closed 25 years ago
Quit from browser or composer doesn't prompt to save Composer
Categories
(Core :: DOM: Editor, defect, P1)
Core
DOM: Editor
Tracking
()
VERIFIED
FIXED
M18
People
(Reporter: Brade, Assigned: bryner)
References
Details
(Whiteboard: [dogfood-] [nsbeta2+])
I noticed a few days ago that if I chose Quit (such as from the File menu), then
I wouldn't be prompted to save modified files in Composer. This causes a loss of
data!
Note: it doesn't matter if Composer is the front window or not.
To reproduce:
* Launch
* New Blank Page
* type some text
* choose Quit from the File menu
Comment 1•26 years ago
|
||
assigning to sfraser for debug
Comment 3•26 years ago
|
||
Over to danm. Our 'onclose' method is never being called.
Assignee: sfraser → danm
Status: ASSIGNED → NEW
Comment 4•26 years ago
|
||
domWindow.tryToClose is 'undefined' where it should not be.
Updated•26 years ago
|
Target Milestone: M16 → M18
Comment 7•26 years ago
|
||
chris: I've found that changing the JS function goQuitApplication() in
globalOverlay.js to call domWindow.onclose() instead of .tryToClose() works
pretty well, and avoids having another 'special' function.
| Assignee | ||
Comment 9•26 years ago
|
||
I have a fix here, I think.
Assignee: saari → bryner
Status: ASSIGNED → NEW
| Assignee | ||
Comment 10•26 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 11•26 years ago
|
||
this is not fixed in 6/15 build.....
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 12•26 years ago
|
||
actually this is fixed...forgot I had to make the file "dirty" first....
Status: REOPENED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 14•25 years ago
|
||
Reopening bug. I am seeing this again.
I think it only happens in one of these two situations
* modified Composer window is the front-most window
* modified Composer window is behind a browser window
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Comment 15•25 years ago
|
||
Brian discovered it was caused by the window mediator's enumerators skipping a
window when windows were deleted underneath them. I've made it stop doing that.
Status: REOPENED → RESOLVED
Closed: 26 years ago → 25 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•