enumerators GetNext() now returns the current window and then immediately advances to the next, rather than holding the last window and advancing before returning. fixes a skip when windows are deleted beneath them. bug 39633. r=bryner@netscape.com